Fix SonarQube maintainability issues in lost-item-service
## Changes

### DTOMapper Improvements:
- Added private constructor to hide implicit public one (S1118)
- Replaced Stream.collect(Collectors.toList()) with modern Stream.toList() (Java 16+)
- Removed unused Collectors import

### SearchReportService Refactoring:
- Replaced Stream.collect(Collectors.toList()) with Stream.toList() in 3 locations
- Cleaner, more modern Java 16+ syntax
- Reduced object allocations with immutable lists

### SearchSuggestionService Refactoring:
- Replaced Stream.collect(Collectors.toList()) with Stream.toList() in 2 locations
- Improved code style consistency

## SonarQube Impact:
- Reduces maintainability issues significantly
- Fixes Medium priority code quality issues
- Aligns with modern Java best practices
- Improves code clarity and intention

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>